# approvaltests-experiments

./: CMakeLists.txt
cmake/approvaltests/: CMakeLists.txt  CMakeLists.txt.in
cmake/gtest/: CMakeLists.txt
tests/: experiments.Verify.FormatCustom.approved.txt  experiments.VerifyAll.FormatAllCustom.approved.txt  experiments.VerifyAll.FormatVector.approved.txt  experiments.cpp  main.cpp
